--- a/app/src/main/res/layout/recycler_view_layout.xml
+++ b/app/src/main/res/layout/recycler_view_layout.xml
@@ -16,7 +16,7 @@
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/card_color"
+        android:background="@color/lavendar"
         android:padding="13dp">
 
         <TextView
@@ -61,6 +61,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/textViewBodyRV" />
+
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
