--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
     <gradient
-        android:angle="225"
-        android:endColor="@android:color/darker_gray"
-        android:startColor="#044fab"/>
+        android:startColor="#FF9482"
+        android:endColor="#7D77FF"
+        android:angle="90"
+        ></gradient>
+
 </shape>
